{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 167,
  "lineage": "37dc010b-209e-c1b3-fab4-89a04f17426e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0373d0e8c9aa3ce77",
            "arn": "arn:aws:ec2:us-east-1:801232946361:elastic-ip/eipalloc-0373d0e8c9aa3ce77",
            "domain": "vpc",
            "id": "eipalloc-0373d0e8c9aa3ce77",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-92-176-240.compute-1.amazonaws.com",
            "public_ip": "54.92.176.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cau-eleitoral-nat-eip-1"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-nat-eip-1",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:internet-gateway/igw-0e06a355fe16746f8",
            "id": "igw-0e06a355fe16746f8",
            "owner_id": "801232946361",
            "tags": {
              "Name": "cau-eleitoral-igw"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-igw",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "cau-eleitoral-alb-logs-801232946361",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:loadbalancer/app/cau-eleitoral-alb/9a263e9957a1bea1",
            "arn_suffix": "app/cau-eleitoral-alb/9a263e9957a1bea1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cau-eleitoral-alb-99613689.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:801232946361:loadbalancer/app/cau-eleitoral-alb/9a263e9957a1bea1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cau-eleitoral-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-094b3d1f4d9bbc996"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09190401b67769f8b"
              },
              {
                "subnet_id": "subnet-0c3fdd518fc73901c"
              },
              {
                "subnet_id": "subnet-0fcda5c87157f9ea0"
              }
            ],
            "subnets": [
              "subnet-09190401b67769f8b",
              "subnet-0c3fdd518fc73901c",
              "subnet-0fcda5c87157f9ea0"
            ],
            "tags": {
              "Name": "cau-eleitoral-alb"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-alb",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_id": "vpc-034bf0c6150887db5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:listener/app/cau-eleitoral-alb/9a263e9957a1bea1/9271a46b782ef370",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801232946361:listener/app/cau-eleitoral-alb/9a263e9957a1bea1/9271a46b782ef370",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:loadbalancer/app/cau-eleitoral-alb/9a263e9957a1bea1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "cau-eleitoral-http-listener"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-http-listener",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_s3_bucket.alb_logs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-admin-tg/ec0da772ed822ca9",
            "arn_suffix": "targetgroup/cau-eleitoral-admin-tg/ec0da772ed822ca9",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-admin-tg/ec0da772ed822ca9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cau-eleitoral-admin-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cau-eleitoral-admin-tg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-admin-tg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-api-tg/eaaa1e74701fdf18",
            "arn_suffix": "targetgroup/cau-eleitoral-api-tg/eaaa1e74701fdf18",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-api-tg/eaaa1e74701fdf18",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cau-eleitoral-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cau-eleitoral-api-tg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-api-tg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-public-tg/90699ac6a160d060",
            "arn_suffix": "targetgroup/cau-eleitoral-public-tg/90699ac6a160d060",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:801232946361:targetgroup/cau-eleitoral-public-tg/90699ac6a160d060",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cau-eleitoral-public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cau-eleitoral-public-tg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-public-tg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0373d0e8c9aa3ce77",
            "association_id": "eipassoc-0f82932c48657826f",
            "connectivity_type": "public",
            "id": "nat-0d6743f16e595cbf9",
            "network_interface_id": "eni-0197ade00198f3583",
            "private_ip": "10.0.10.195",
            "public_ip": "54.92.176.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09190401b67769f8b",
            "tags": {
              "Name": "cau-eleitoral-nat-1"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-nat-1",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-058517222c380e2ad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d6743f16e595cbf9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058517222c380e2ad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:route-table/rtb-0301e8ee4d76361fb",
            "id": "rtb-0301e8ee4d76361fb",
            "owner_id": "801232946361",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cau-eleitoral-database-rt"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-database-rt",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:route-table/rtb-058517222c380e2ad",
            "id": "rtb-058517222c380e2ad",
            "owner_id": "801232946361",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cau-eleitoral-private-rt"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-private-rt",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:route-table/rtb-0a4f6fffb06cf64dd",
            "id": "rtb-0a4f6fffb06cf64dd",
            "owner_id": "801232946361",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e06a355fe16746f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cau-eleitoral-public-rt"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-public-rt",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f79a744140e1eae",
            "route_table_id": "rtb-0301e8ee4d76361fb",
            "subnet_id": "subnet-001fca4f56b4a26d4"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092beb7bdc666c21d",
            "route_table_id": "rtb-0301e8ee4d76361fb",
            "subnet_id": "subnet-0123e1841ac8a08e4"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08107276de8558f8d",
            "route_table_id": "rtb-0301e8ee4d76361fb",
            "subnet_id": "subnet-047e4fa3249387c1b"
          },
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.database",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0860802f74567d0ba",
            "route_table_id": "rtb-058517222c380e2ad",
            "subnet_id": "subnet-01568568a84248c7d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e607ef5eba63e56",
            "route_table_id": "rtb-058517222c380e2ad",
            "subnet_id": "subnet-0167b599750ba915d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a62b21c03c055890",
            "route_table_id": "rtb-058517222c380e2ad",
            "subnet_id": "subnet-06ceb9f0d50113c08"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c934a4ac5ceff491",
            "route_table_id": "rtb-0a4f6fffb06cf64dd",
            "subnet_id": "subnet-09190401b67769f8b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbaadc933732b92a",
            "route_table_id": "rtb-0a4f6fffb06cf64dd",
            "subnet_id": "subnet-0c3fdd518fc73901c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b01943619d53ef2",
            "route_table_id": "rtb-0a4f6fffb06cf64dd",
            "subnet_id": "subnet-0fcda5c87157f9ea0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:security-group/sg-094b3d1f4d9bbc996",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094b3d1f4d9bbc996",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cau-eleitoral-alb-sg",
            "name_prefix": "",
            "owner_id": "801232946361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cau-eleitoral-alb-sg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-alb-sg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0edabc9b33b61fece",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API port from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094b3d1f4d9bbc996"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Admin port from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094b3d1f4d9bbc996"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Public port from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094b3d1f4d9bbc996"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cau-eleitoral-ecs-tasks-sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cau-eleitoral-ecs-tasks-sg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-ecs-tasks-sg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secrets_rotation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:security-group/sg-086d192490354aae5",
            "description": "Security group for secrets rotation lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d192490354aae5",
            "ingress": [],
            "name": "cau-eleitoral-secrets-rotation-sg",
            "name_prefix": "",
            "owner_id": "801232946361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cau-eleitoral-secrets-rotation-sg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-secrets-rotation-sg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:security-group/sg-075e46cc62c6c70c9",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075e46cc62c6c70c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cau-eleitoral-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "801232946361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cau-eleitoral-vpc-endpoints-sg"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-vpc-endpoints-sg",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "timeouts": null,
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-001fca4f56b4a26d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001fca4f56b4a26d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-database-us-east-1a",
              "Type": "database"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-database-us-east-1a",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "database"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-0123e1841ac8a08e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0123e1841ac8a08e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-database-us-east-1b",
              "Type": "database"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-database-us-east-1b",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "database"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-047e4fa3249387c1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047e4fa3249387c1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-database-us-east-1c",
              "Type": "database"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-database-us-east-1c",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "database"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-01568568a84248c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01568568a84248c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-private-us-east-1a",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-private-us-east-1a",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "private"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-0167b599750ba915d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0167b599750ba915d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-private-us-east-1b",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-private-us-east-1b",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "private"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-06ceb9f0d50113c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ceb9f0d50113c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-private-us-east-1c",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-private-us-east-1c",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "private"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-09190401b67769f8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09190401b67769f8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-public-us-east-1a",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-public-us-east-1a",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "public"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-0c3fdd518fc73901c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3fdd518fc73901c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-public-us-east-1b",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-public-us-east-1b",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "public"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:subnet/subnet-0fcda5c87157f9ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcda5c87157f9ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "801232946361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cau-eleitoral-public-us-east-1c",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-public-us-east-1c",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral",
              "Type": "public"
            },
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc/vpc-034bf0c6150887db5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0706a56136ce06d5c",
            "default_route_table_id": "rtb-0edba33239dd1e98d",
            "default_security_group_id": "sg-013ce5c1d7abb74f5",
            "dhcp_options_id": "dopt-04c058224b0c7c871",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034bf0c6150887db5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0edba33239dd1e98d",
            "owner_id": "801232946361",
            "tags": {
              "Name": "cau-eleitoral-vpc"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-vpc",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-079cd4aa1e501b1f5",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-079cd4aa1e501b1f5",
            "ip_address_type": "ipv4",
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-058517222c380e2ad",
              "rtb-0a4f6fffb06cf64dd"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cau-eleitoral-dynamodb-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-dynamodb-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-03358e947e7048d59",
            "dns_entry": [
              {
                "dns_name": "vpce-03358e947e7048d59-3mdt7n2c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03358e947e7048d59-3mdt7n2c-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03358e947e7048d59-3mdt7n2c-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03358e947e7048d59-3mdt7n2c-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02761031B7TPOONL3R8B"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z02769803SKVVUNT4Y7UX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03358e947e7048d59",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-053654e305b0a9c1a",
              "eni-067750c6829c410fb",
              "eni-0b17897fd89655407"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.53.127",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.74.182",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.89.66",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-ecr-api-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-ecr-api-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-0470c4ca3d6df0d43",
            "dns_entry": [
              {
                "dns_name": "vpce-0470c4ca3d6df0d43-wwishrxw.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0470c4ca3d6df0d43-wwishrxw-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0470c4ca3d6df0d43-wwishrxw-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0470c4ca3d6df0d43-wwishrxw-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0772484269OB2AJ51OJS"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0772484269OB2AJ51OJS"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z027065124ENDOTSK8INL"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z027065124ENDOTSK8INL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0470c4ca3d6df0d43",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a9890e4162a3c257",
              "eni-0d1dacf2cd88c42cb",
              "eni-0fd44d417a63296c9"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.61.229",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.73.77",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.95.190",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-ecr-dkr-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-ecr-dkr-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-04b82f80f5c0820b9",
            "dns_entry": [
              {
                "dns_name": "vpce-04b82f80f5c0820b9-r184xls2.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04b82f80f5c0820b9-r184xls2-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04b82f80f5c0820b9-r184xls2-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04b82f80f5c0820b9-r184xls2-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02779432JSX1NOKEKY50"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0638349POX64HOTNGC8"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z027828116R5ZFICTJXL"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z02782821G6O9YLSD7LNA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04b82f80f5c0820b9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00b4e861dfbaa57cc",
              "eni-0522f4261791ce1b1",
              "eni-0e29913f3be206717"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.49.248",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.67.159",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.81.213",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-logs-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-logs-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-0403908dc315898f8",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0403908dc315898f8",
            "ip_address_type": "ipv4",
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-058517222c380e2ad",
              "rtb-0a4f6fffb06cf64dd"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cau-eleitoral-s3-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-s3-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-0224997711bd2107b",
            "dns_entry": [
              {
                "dns_name": "vpce-0224997711bd2107b-8p7at5ni.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0224997711bd2107b-8p7at5ni-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0224997711bd2107b-8p7at5ni-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0224997711bd2107b-8p7at5ni-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02772271WZVFD987EB2O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0224997711bd2107b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-004f8c07e9722621e",
              "eni-04dd7d9335529bda5",
              "eni-07fe4cc4688129124"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.62.180",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.72.92",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.93.39",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-secretsmanager-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-secretsmanager-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-0538e1aeceb66e384",
            "dns_entry": [
              {
                "dns_name": "vpce-0538e1aeceb66e384-zzeck37h.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0538e1aeceb66e384-zzeck37h-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0538e1aeceb66e384-zzeck37h-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0538e1aeceb66e384-zzeck37h-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06383402EGBEJWCBOZP8"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z06352831A1XE59UXJHNF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0538e1aeceb66e384",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00dde53b8c0cb82b2",
              "eni-02a80449ac4c58eed",
              "eni-078907128236b44fe"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.48.102",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.75.38",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.92.83",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-ssm-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-ssm-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:801232946361:vpc-endpoint/vpce-0f6896119b353bd94",
            "dns_entry": [
              {
                "dns_name": "vpce-0f6896119b353bd94-5nako5tq.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f6896119b353bd94-5nako5tq-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f6896119b353bd94-5nako5tq-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f6896119b353bd94-5nako5tq-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00701391VNDYD43IH38Y"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z06258632VDY3MO6Z7319"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f6896119b353bd94",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-069438972e8f6143a",
              "eni-07904f478217e9084",
              "eni-0945fbd18620c6d22"
            ],
            "owner_id": "801232946361",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-075e46cc62c6c70c9"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.49.241",
                "subnet_id": "subnet-01568568a84248c7d"
              },
              {
                "ipv4": "10.0.64.172",
                "subnet_id": "subnet-0167b599750ba915d"
              },
              {
                "ipv4": "10.0.93.235",
                "subnet_id": "subnet-06ceb9f0d50113c08"
              }
            ],
            "subnet_ids": [
              "subnet-01568568a84248c7d",
              "subnet-0167b599750ba915d",
              "subnet-06ceb9f0d50113c08"
            ],
            "tags": {
              "Name": "cau-eleitoral-ssmmessages-endpoint"
            },
            "tags_all": {
              "CostCenter": "Eleitoral",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cau-eleitoral-ssmmessages-endpoint",
              "Owner": "CAU",
              "Project": "CAU-Sistema-Eleitoral"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-034bf0c6150887db5"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}